<resources>
    <string name="app_name">BusU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_book">Book</string>
    <string name="title_reservation">Reservations</string>
    <string name="title_bus_schedule">Bus Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About</string>

    <string name="cd_book">Book</string>
    <string name="cd_reservation">Reservations</string>
    <string name="cd_bus_schedule">Bus Schedule</string>
    <string name="cd_profile">Profile</string>
    <string name="cd_about">About</string>
    <string-array name="students_array">
        <item>Luis Ignacio López Castro</item>
        <item>Pablo Arce Garro</item>
        <item>Anderson Mora Aguero</item>
        <item>Hector Mendez Hernandez</item>
    </string-array>

    <string-array name="ids_array">
        <item>402420889</item>
        <item>0000</item>
        <item>0000</item>
        <item>0000</item>
    </string-array>
    <string name="students">Luis Ignacio López Castro\n 402420889\n Pablo Arce Garro\n 0000\n Anderson Mora Aguero\n115600170\n Hector Mendez Hernandez\n118460849"</string>
    <string name="rute1">Central-Bejamin</string>
    <string name="rute2">Bejamin-Central</string>
    <string name="rute3">Central-Alajuela</string>ÿ
    <string name="time1">7:00am</string>
    <string name="time2">8:00am</string>
    <string name="time3">9:00am</string>
    <string name="time4">10:00am</string>
    <string name="time5">12:00pm</string>
    <string name="time6">1:00pm</string>
    <string name="time7">2:00pm</string>
    <string name="time8">3:00pm</string>
    <string name="time9">4:00pm</string>
    <string name="time10">5:00pm</string>
    <string name="login_failed">\"Login failed\"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password"><![CDATA[Password must be >=5 characters]]></string>
    <string name="welcome">Bienvenid@!</string>


</resources>